--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/assets/deepmynd_16.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DeepMynd R1</title>
+    <title>UniMynd R1</title>
   </head>
   <body>
     <div id="root"></div>
